# zhuochong

./: .gitignore  CHANGELOG.md  README.md  Rainbow桌宠.spec  index.html  pet.py  启动桌宠.bat
RainbowPet/: .gitignore  CMakeLists.txt
RainbowPet/src/: Config.cpp  Config.h  GifPlayer.cpp  GifPlayer.h  PetWindow.cpp  PetWindow.h  main.cpp
